minor changes on google colab versions

--- a/STFT_decoder_conv1D_linear.ipynb
+++ b/STFT_decoder_conv1D_linear.ipynb
@@ -81,6 +81,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "XVP_STs6UW4A"
+      },
+      "source": [
+        "!pip install soundfile"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8QY0EBUlUars"
+      },
+      "source": [
+        "!nvidia-smi"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "TpwUD3pRywyS"
       },
       "source": [
@@ -564,7 +586,7 @@
         "          'metrics': 'mae',\n",
         "          'activations': 'relu, tanh',\n",
         "          'spectrogram_input_shape' : (131,257),\n",
-        "          'run env' : 'google colab', \n",
+        "          'run env' : 'Themistoclea', \n",
         "          'data' : 'macaque coos dataset from ESP library.',  \n",
         "          'save_model': 'STFT_inv_mac_conv1D_simple.h5',\n",
         "          'notebook' : 'STFT_decoder_conv1D_linear.ipynb',\n",
@@ -721,7 +743,7 @@
         "id": "0OSToTU-tzK_"
       },
       "source": [
-        "model.compile(optimizer=optimizers.Adam(lr=PARAMS['lr']), loss=PARAMS['loss'],metrics=PARAMS['metrics'])"
+        "model.compile(optimizer=optimizers.Adam(learning_rate=PARAMS['lr']), loss=PARAMS['loss'],metrics=PARAMS['metrics'])"
       ],
       "execution_count": null,
       "outputs": []
@@ -1035,9 +1057,9 @@
       "source": [
         "for i in range(n):\n",
         "    display(IPython.display.Audio(orig_audio[i],rate=24414))\n",
-        "    print('original')\n",
+        "    print('original',i+1)\n",
         "    display(IPython.display.Audio(decoded_audio[i],rate=24414))\n",
-        "    print('decoded')"
+        "    print('decoded',i+1)"
       ],
       "execution_count": null,
       "outputs": [
