adjust for colab. also, needs lower l.r.

--- a/STFT_decoder_conv1D_linear.ipynb
+++ b/STFT_decoder_conv1D_linear.ipynb
@@ -214,7 +214,7 @@
    ],
    "source": [
     "# create pandas dataframe with 'annotations.csv' content\n",
-    "df=pd.read_csv('/home/emmanouela/Documents/ESP/data/annotations.csv')\n",
+    "df=pd.read_csv('/content/annotations.csv')\n",
     "df.head(10)"
    ]
   },
@@ -271,7 +271,7 @@
    "source": [
     "# randomly choose a filename from dataframe, then plot time-series and display audio\n",
     "index=random.randrange(len(df))\n",
-    "filepath = os.path.join('/home/emmanouela/Documents/ESP/data',df.iloc[index].split,df.iloc[index].filename)\n",
+    "filepath = os.path.join('/content',df.iloc[index].split,df.iloc[index].filename)\n",
     "data, samplerate = sf.read(filepath)\n",
     "plt.plot(data,'m')\n",
     "plt.show()\n",
@@ -299,8 +299,8 @@
    "source": [
     "# let's create train and valid lists, which will contain the file location of their members\n",
     "\n",
-    "train_filenames=('/home/emmanouela/Documents/ESP/data/train/'+df.loc[df['split']=='train','filename']).values.tolist()\n",
-    "valid_filenames=('/home/emmanouela/Documents/ESP/data/valid/'+df.loc[df['split']=='valid','filename']).values.tolist()\n"
+    "train_filenames=('/content/train/'+df.loc[df['split']=='train','filename']).values.tolist()\n",
+    "valid_filenames=('/content/valid/'+df.loc[df['split']=='valid','filename']).values.tolist()\n"
    ]
   },
   {
@@ -806,13 +806,7 @@
       "365/365 [==============================] - 14s 37ms/step - loss: 3.2169e-04 - mae: 0.0104 - val_loss: 0.0013 - val_mae: 0.0201\n",
       "Epoch 59/80\n",
       "365/365 [==============================] - 13s 37ms/step - loss: 2.9420e-04 - mae: 0.0100 - val_loss: 0.0013 - val_mae: 0.0211\n",
-      "Epoch 60/80\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/80\n",
       "365/365 [==============================] - 13s 35ms/step - loss: 2.9043e-04 - mae: 0.0100 - val_loss: 0.0013 - val_mae: 0.0191\n",
       "Epoch 61/80\n",
       "365/365 [==============================] - 14s 38ms/step - loss: 3.0473e-04 - mae: 0.0102 - val_loss: 0.0013 - val_mae: 0.0196\n",
